Revert "Make sure canvas and image covers take the same space"
This reverts commit 1ab80f75f9d2319e9e6db66ecab49fe56c40114e.

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -77,7 +77,7 @@
   height: 256px
 
   .missing-cover
-    display: inline-block
+    display: block
 
 // preview card for album or artist listings
 .preview-card
